Replace sun.misc.Base64Encoder with apache commons codec Base64. Add cause to thrown exceptions. Remove TODOs